Added style to the tags to match titles

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 ncolor{
     border-style: solid;
-    border-color: #fd850a 
-
+    border-color: #fd850a; 
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 10pt;
 }
+
 
