--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@ ncolor{
     border-style: solid;
     border-color: #fd850a; 
     font-family: Verdana, Geneva, sans-serif;
-    font-size: 10pt;
+    font-size: 8pt;
     color: #000000;
+    margin-left: 5px;
 
+    border-radius: 25px;
+    padding: 1px; 
     background-image: -webkit-gradient(
 	    linear,
 	    right top,
