Added a border width - looks alright

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 ncolor{
     border-style: solid;
-    border-color: #fd850a; 
+    border-color: #000000;
+    border-width: 1px;
     font-family: Verdana, Geneva, sans-serif;
     font-size: 8pt;
     color: #000000;
